1.2.8p25:
    Checks & Agents:
    * 4823 FIX: netapp_api_cpu: Fixed crash if data for node is missing...
    * 4874 FIX: cisco_power: Improved discovery of power supplies...
            NOTE: Please refer to the migration notes!
    * 4824 FIX: f5bigip_conns: Fixed crash if Parameters are at 'No Levels'...


1.2.8p24:
    Checks & Agents:
    * 4636 Added compatibility for Lenovo blades...
    * 4637 FIX: blade_blades: Fixed buggy state validation
    * 4788 FIX: openhardwaremonitor: New support of current hardware...
    * 4789 FIX: check_mk_agent.aix: Fixed computation of uptime...
    * 4772 FIX: cisco_wlc, cisco_wlc_clients: Added support for Cisco 1850 devices
    * 4790 FIX: Fixed scaling for the average in interface services of pnp4nagios graphs...
    * 4634 FIX: aix_if: Make check work with different ifconfig output format...
    * 4774 FIX: wmi_cpuload: Expanded missing information handling
    * 4635 FIX: raritan_emx_sensors.temp, raritan_px_sensors: Fix checks for Nagios core, add missing WATO rule to raritan_px_sensors
    * 4775 FIX: fortigate_sessions: Improved missing or invalid output handling
    * 4792 FIX: Fixed wrong unit in graph for tape utilization...
    * 4777 FIX: esx_vsphere_sensors: Fixed wrong interpretation of ESX sensor health state 'UNKNOWN'
    * 4793 FIX: chrony: Changed to raw IP address without dns name to avoid empty output...
    * 4794 FIX: check_mk_agent.solaris: Now considers top in /usr/bin/ and /usr/local/bin/
    * 4778 FIX: lnx_quotas: Adapted plugin output if TABS are used in fstab
    * 4795 FIX: netstat: Fixed wrong output if LISTENING connections should be monitored on Ubuntu...
    * 4779 FIX: check_mk_agent.freebsd, check_mk_agent.solaris: Reduce agent output by excluding mirror devices
    * 4781 FIX: mk_oracle, mk_oracle.aix: Added support for Oracle 12.2
    * 4858 FIX: omd_apache data collection: fixed issues caused by missing newline at the end of statsfile(s)...