@@ -4,6 +4,7 @@
     * 4874 FIX: cisco_power: Improved discovery of power supplies...
             NOTE: Please refer to the migration notes!
     * 4824 FIX: f5bigip_conns: Fixed crash if Parameters are at 'No Levels'...
+    * 4875 FIX: Fixed graph labeling and unit of active HTTP service
 
 
 1.2.8p24:
